Last question solution added, but pixel prediction is pending

--- a/Assignment3/yd1530_HW3.ipynb
+++ b/Assignment3/yd1530_HW3.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 86,
    "id": "3c9e1a1a",
    "metadata": {},
    "outputs": [],
@@ -24,12 +24,14 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "import math"
+    "import math\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 87,
    "id": "9dc16f4d",
    "metadata": {},
    "outputs": [
@@ -377,7 +379,7 @@
        "[3823 rows x 65 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 88,
    "id": "9bcaf38e",
    "metadata": {},
    "outputs": [
@@ -740,7 +742,7 @@
        "[1797 rows x 65 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 89,
    "id": "79ad7026",
    "metadata": {},
    "outputs": [],
@@ -764,16 +766,11 @@
     "classes = 10\n",
     "X25_train = train_data[train_data[64] == 0].sample(25)\n",
     "X100_train = train_data[train_data[64] == 0].sample(100)\n",
-    "#print(X25_train)\n",
-    "# print(X100_train)\n",
+    "\n",
     "for i in range(1,classes,1):\n",
     "\n",
     "    X25_train = X25_train.append(train_data[train_data[64] == i].sample(25), ignore_index = True)\n",
-    "    X100_train = X100_train.append(train_data[train_data[64] == i].sample(100), ignore_index= True)\n",
-    "\n",
-    "# with pd.option_context('display.max_rows', None, 'display.max_columns', None):  # more options can\n",
-    "# be specified also\n",
-    "#     display(X25_train)\n"
+    "    X100_train = X100_train.append(train_data[train_data[64] == i].sample(100), ignore_index= True)\n"
    ]
   },
   {
@@ -788,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 90,
    "id": "8d3b63f8",
    "metadata": {},
    "outputs": [
@@ -812,10 +809,10 @@
     "X_train_100 = X100_train.iloc[:,0:64]\n",
     "Y_train_100 = X100_train.iloc[:,64];\n",
     "\n",
-    "# X_test = test_data.iloc[:,0:64]\n",
-    "# Y_test = test_data.iloc[:,64]\n",
-    "X_test = test_data[test_data.columns[0:64]]\n",
-    "Y_test = test_data[test_data.columns[64]]\n",
+    "X_test = test_data.iloc[:,0:64]\n",
+    "Y_test = test_data.iloc[:,64]\n",
+    "# X_test = test_data[test_data.columns[0:64]]\n",
+    "# Y_test = test_data[test_data.columns[64]]\n",
     "\n",
     "print(X_test.shape)\n",
     "print(Y_test.shape)\n",
@@ -825,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 91,
    "id": "6bcbd35c",
    "metadata": {},
    "outputs": [
@@ -835,27 +832,27 @@
      "text": [
       "-----Printing results of 25 samples using Multilayer Perceptrons with 1 layer-----\n",
       "                   Training Error  Testing Error\n",
-      "Hidden Units = 2            0.604       0.716750\n",
-      "Hidden Units = 5            0.660       0.757930\n",
-      "Hidden Units = 10           0.692       0.752922\n",
+      "Hidden Units = 2            0.680       0.756817\n",
+      "Hidden Units = 5            0.604       0.751252\n",
+      "Hidden Units = 10           0.768       0.803005\n",
       "\n",
       "-----Printing results of 100 samples using Multilayer Perceptrons with 1 layer-----\n",
       "                   Training Error  Testing Error\n",
-      "Hidden Units = 2            0.737       0.762938\n",
-      "Hidden Units = 5            0.618       0.687257\n",
-      "Hidden Units = 10           0.679       0.722315\n",
+      "Hidden Units = 2            0.593       0.646633\n",
+      "Hidden Units = 5            0.599       0.668336\n",
+      "Hidden Units = 10           0.900       0.898720\n",
       "\n",
       "-----Printing results of 25 samples using Multilayer Perceptrons with 2 layers-----\n",
       "                   Training Error  Testing Error\n",
-      "Hidden Units = 2            0.548       0.678353\n",
-      "Hidden Units = 5            0.340       0.508625\n",
-      "Hidden Units = 10           0.380       0.559822\n",
+      "Hidden Units = 2             0.58       0.690039\n",
+      "Hidden Units = 5             0.02       0.341124\n",
+      "Hidden Units = 10            0.00       0.169727\n",
       "\n",
       "-----Printing results of 100 samples using Multilayer Perceptrons with 2 layers-----\n",
       "                   Training Error  Testing Error\n",
-      "Hidden Units = 2            0.662       0.695047\n",
-      "Hidden Units = 5            0.034       0.212577\n",
-      "Hidden Units = 10           0.000       0.104619\n"
+      "Hidden Units = 2            0.523       0.570952\n",
+      "Hidden Units = 5            0.007       0.165832\n",
+      "Hidden Units = 10           0.000       0.092376\n"
      ]
     }
    ],
@@ -877,7 +874,6 @@
     "index = []\n",
     "columns = ['Training Error','Testing Error']\n",
     "\n",
-    "\n",
     "# for layer 1\n",
     "layers = 1\n",
     "for units in hidden_units:\n",
@@ -897,7 +893,7 @@
     "layers = 2\n",
     "for units in hidden_units:\n",
     "\n",
-    "        clf1 = MLPClassifier(alpha=1e-5, max_iter=10000, hidden_layer_sizes=(units,layers), random_state=1)\n",
+    "        clf1 = MLPClassifier(alpha=1e-5, max_iter=10000, hidden_layer_sizes=(units,units), random_state=1)\n",
     "        clf1.fit(X_train_25, Y_train_25)\n",
     "        trainError_25_layer2.append(1 - clf1.score((X_train_25),(Y_train_25)))\n",
     "        testError_25_layer2.append(1 - clf1.score(X_test,Y_test))\n",
@@ -953,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "3d813e08",
    "metadata": {},
    "outputs": [],
@@ -961,30 +957,90 @@
     "# creating given dataset with class 6 and class 9 and 48 features\n",
     "X_class69 = X100_train[X100_train[64] == 6]\n",
     "X_class69.append(X100_train[X100_train[64] == 9])\n",
+    "# first 48 features from train data set with only 6 and 9 classes\n",
     "X_class69_48 = X_class69.iloc[:,0:48]\n",
+    "# remaining 16 features from train data\n",
     "X_class69_16 = X_class69.iloc[:,48:64]\n",
-    "print(X_class69_16.shape)\n",
-    "Y_class69 = X_class69.iloc[:,64]\n",
-    "print(Y_class69_16.shape)\n"
+    "\n",
+    "X_test_69 = test_data[test_data[64] == 6]\n",
+    "X_test_69.append(test_data[test_data[64] ==9])\n",
+    "# remaining 16 features from test data\n",
+    "Y_test_69_16 = X_test_69.columns[48:64]\n",
+    "# first 48 features from test data set with only 6 and 9 classes\n",
+    "X_test_69_48 = X_test_69.iloc[:,0:48]\n",
+    "# classification column of training data\n",
+    "Y_class69 = X_class69.iloc[:,64]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 93,
    "id": "c459a0a2",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "----Finding error for each feature from 49 to 64----\n",
+      "\n",
+      "Feature:   49\n",
+      "Error value:  0.9162119937867944\n",
+      "Feature:   50\n",
+      "Error value:  2.4670706577589017\n",
+      "Feature:   51\n",
+      "Error value:  2.3837691296077996\n",
+      "Feature:   52\n",
+      "Error value:  3.7959436036330394\n",
+      "Feature:   53\n",
+      "Error value:  3.2715336316512884\n",
+      "Feature:   54\n",
+      "Error value:  2.9486988997028503\n",
+      "Feature:   55\n",
+      "Error value:  1.3939293882151973\n",
+      "Feature:   56\n",
+      "Error value:  0.6909667886594428\n",
+      "Feature:   57\n",
+      "Error value:  0.6909667886594428\n",
+      "Feature:   58\n",
+      "Error value:  1.2836112850296069\n",
+      "Feature:   59\n",
+      "Error value:  2.455301337148029\n",
+      "Feature:   60\n",
+      "Error value:  1.8451745171342169\n",
+      "Feature:   61\n",
+      "Error value:  2.8975469310685686\n",
+      "Feature:   62\n",
+      "Error value:  3.7054242019392247\n",
+      "Feature:   63\n",
+      "Error value:  0.8898183569477595\n",
+      "Feature:   64\n",
+      "Error value:  0.620841027900956\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.datasets import make_regression\n",
     "from sklearn.metrics import mean_squared_error\n",
+    "import math\n",
     "\n",
-    "regr = MLPRegressor(random_state=1, max_iter=200).fit(X_class69_48, Y_class69)\n",
-    "regr.score(X_class69_16[:,0:1], Y_class69)\n",
-    "# for prediction, it should be 16 features but getting error\n",
-    "# testing_error = mean_squared_error(Y_class69, regr.predict(X_class69_16.iloc[:,0]))   \n",
+    "regr = MLPRegressor(random_state=1, max_iter=200)\n",
     "\n",
-    "# print(testing_error)\n"
+    "print('\\n----Finding error for each feature from 49 to 64----\\n')\n",
+    "\n",
+    "for k in range(49, 65):\n",
+    "    y_value = X_class69[k]\n",
+    "    testing_for_y = X_test_69[k]\n",
+    "    regr.fit(X_class69_48, y_value)\n",
+    "    predicted_y = regr.predict(X_test_69_48.values)\n",
+    "    print('Feature:  ',k)   \n",
+    "    print('Error value: ',math.sqrt(mean_squared_error(testing_for_y, predicted_y)))\n",
+    "\n",
+    "# pending pixel represenation"
    ]
   },
   {
