Added question 5 solution, working as expected .

--- a/Assignment3/yd1530_HW3.ipynb
+++ b/Assignment3/yd1530_HW3.ipynb
@@ -974,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 98,
    "id": "c459a0a2",
    "metadata": {
     "scrolled": true
@@ -1035,18 +1035,19 @@
     "for k in range(49, 65):\n",
     "    y_value = X_class69[k]\n",
     "    testing_for_y = X_test_69[k]\n",
+    "    original.append(testing_for_y)\n",
     "    regr.fit(X_class69_48, y_value)\n",
     "    predicted_y = regr.predict(X_test_69_48.values)\n",
+    "    predicted.append(predicted_y)\n",
     "    print('Feature:  ',k)   \n",
     "    print('Error value: ',math.sqrt(mean_squared_error(testing_for_y, predicted_y)))\n",
-    "\n",
-    "# pending pixel represenation"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4762d0c",
+   "id": "7e66cb44",
    "metadata": {},
    "outputs": [],
    "source": []
