Corrected hidden layer input part of mlp classifier, uploading the final file

--- a/Assignment3/Final_HW3.ipynb
+++ b/Assignment3/Final_HW3.ipynb
@@ -1149,7 +1149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 38,
    "id": "6bcbd35c",
    "metadata": {},
    "outputs": [
@@ -1159,15 +1159,15 @@
      "text": [
       "-----Printing results of 25 samples using Multilayer Perceptrons with 1 layer-----\n",
       "                   Training Error  Testing Error\n",
-      "Hidden Units = 2            0.640       0.796327\n",
-      "Hidden Units = 5            0.616       0.726767\n",
-      "Hidden Units = 10           0.900       0.899277\n",
+      "Hidden Units = 2            0.888       0.883695\n",
+      "Hidden Units = 5            0.008       0.242627\n",
+      "Hidden Units = 10           0.000       0.188648\n",
       "\n",
       "-----Printing results of 100 samples using Multilayer Perceptrons with 1 layer-----\n",
       "                   Training Error  Testing Error\n",
-      "Hidden Units = 2            0.567       0.601002\n",
-      "Hidden Units = 5            0.592       0.656093\n",
-      "Hidden Units = 10           0.699       0.723984\n",
+      "Hidden Units = 2            0.696       0.736784\n",
+      "Hidden Units = 5            0.130       0.269338\n",
+      "Hidden Units = 10           0.001       0.106288\n",
       "\n",
       "-----Printing results of 25 samples using Multilayer Perceptrons with 2 layers-----\n",
       "                   Training Error  Testing Error\n",
@@ -1205,12 +1205,12 @@
     "layers = 1\n",
     "for units in hidden_units:\n",
     "\n",
-    "        clf1 = MLPClassifier( alpha=1e-5,max_iter=10000, hidden_layer_sizes=(units,layers), random_state=1)\n",
+    "        clf1 = MLPClassifier( alpha=1e-5,max_iter=10000, hidden_layer_sizes=(units,), random_state=1)\n",
     "        clf1.fit(X_train_25, Y_train_25)\n",
     "        trainError_25_layer1.append(1 - clf1.score((X_train_25),(Y_train_25)))\n",
     "        testError_25_layer1.append(1 - clf1.score(X_test,Y_test))\n",
     "        \n",
-    "        clf2 = MLPClassifier(alpha=1e-5, max_iter=10000,hidden_layer_sizes=(units,layers), random_state=1)\n",
+    "        clf2 = MLPClassifier(alpha=1e-5, max_iter=10000,hidden_layer_sizes=(units,), random_state=1)\n",
     "        clf2.fit(X_train_100, Y_train_100)\n",
     "        trainError_100_layer1.append(1 - clf2.score((X_train_100),(Y_train_100)))\n",
     "        testError_100_layer1.append(1 - clf2.score(X_test,Y_test))\n",
