Updated solution, removed cross validation part while calculating error using VotingClassifier

--- a/Project/yd1530_Project.ipynb
+++ b/Project/yd1530_Project.ipynb
@@ -1249,18 +1249,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train error: 0.35 [MLP]\n",
-      "Train error: 0.27 [Decision Tree]\n",
-      "Train error: 0.24 [Random Forest]\n",
-      "Train error: 0.25 [Gradient Boost]\n",
-      "Train error: 0.25 [Ensemble]\n"
+      "Train error: 0.29 [MLP]\n",
+      "Train error: 0.30 [Decision Tree]\n",
+      "Train error: 0.17 [Random Forest]\n",
+      "Train error: 0.00 [Gradient Boost]\n",
+      "Train error: 0.05 [Ensemble]\n"
      ]
     }
    ],
@@ -1291,24 +1291,24 @@
     "\n",
     "for clf, label in zip([clf1, clf2, clf3, clf4, eclf], ['MLP', 'Decision Tree','Random Forest', \n",
     "                                                       'Gradient Boost','Ensemble']):    \n",
-    "    scores = cross_val_score(clf, X_train, Y_train, scoring='accuracy', cv=5)\n",
-    "    print(\"Train error: %0.2f [%s]\" % (1-scores.mean(), label))\n"
+    "    clf.fit(X_train,Y_train)\n",
+    "    print(\"Train error: %0.2f [%s]\" % (1-clf.score(X_train, Y_train), label))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test error: 0.39 [MLP]\n",
-      "Test error: 0.34 [Decision Tree]\n",
-      "Test error: 0.29 [Random Forest]\n",
-      "Test error: 0.33 [Gradient Boost]\n",
-      "Test error: 0.29 [Ensemble]\n"
+      "Test error: 0.37 [MLP]\n",
+      "Test error: 0.35 [Decision Tree]\n",
+      "Test error: 0.24 [Random Forest]\n",
+      "Test error: 0.23 [Gradient Boost]\n",
+      "Test error: 0.19 [Ensemble]\n"
      ]
     }
    ],
@@ -1317,25 +1317,24 @@
     "\n",
     "for clf, label in zip([clf1, clf2, clf3, clf4, eclf], ['MLP', 'Decision Tree','Random Forest', \n",
     "                                                       'Gradient Boost','Ensemble']):    \n",
-    "    scores = cross_val_score(clf, X_test, Y_test, scoring='accuracy', cv=5)\n",
-    "    print(\"Test error: %0.2f [%s]\" % (1-scores.mean(), label))\n",
+    "    print(\"Test error: %0.2f [%s]\" % (1-clf.score(X_test, Y_test), label))\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train error: 0.36 [MLP]\n",
+      "Train error: 0.25 [MLP]\n",
       "Train error: 0.27 [Decision Tree]\n",
-      "Train error: 0.25 [Random Forest]\n",
-      "Train error: 0.25 [Gradient Boost]\n",
-      "Train error: 0.25 [Ensemble]\n"
+      "Train error: 0.17 [Random Forest]\n",
+      "Train error: 0.00 [Gradient Boost]\n",
+      "Train error: 0.08 [Ensemble]\n"
      ]
     }
    ],
@@ -1353,24 +1352,24 @@
     "# calculating training error\n",
     "for clf, label in zip([clf1, clf2, clf3, clf4, eclf], ['MLP', 'Decision Tree','Random Forest', \n",
     "                                                       'Gradient Boost','Ensemble']):    \n",
-    "    scores = cross_val_score(clf, X_train, Y_train, scoring='accuracy', cv=5)\n",
-    "    print(\"Train error: %0.2f [%s]\" % (1-scores.mean(), label))\n"
+    "    clf.fit(X_train,Y_train)\n",
+    "    print(\"Train error: %0.2f [%s]\" % (1-clf.score(X_train, Y_train), label))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test error: 0.38 [MLP]\n",
-      "Test error: 0.33 [Decision Tree]\n",
-      "Test error: 0.26 [Random Forest]\n",
-      "Test error: 0.32 [Gradient Boost]\n",
-      "Test error: 0.29 [Ensemble]\n"
+      "Test error: 0.34 [MLP]\n",
+      "Test error: 0.24 [Decision Tree]\n",
+      "Test error: 0.24 [Random Forest]\n",
+      "Test error: 0.21 [Gradient Boost]\n",
+      "Test error: 0.24 [Ensemble]\n"
      ]
     }
    ],
@@ -1379,9 +1378,15 @@
     "\n",
     "for clf, label in zip([clf1, clf2, clf3, clf4, eclf], ['MLP', 'Decision Tree','Random Forest', \n",
     "                                                       'Gradient Boost','Ensemble']):    \n",
-    "    scores = cross_val_score(clf, X_test, Y_test, scoring='accuracy', cv=5)\n",
-    "    print(\"Test error: %0.2f [%s]\" % (1-scores.mean(), label))"
+    "    print(\"Test error: %0.2f [%s]\" % (1-clf.score(X_test, Y_test), label))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
